<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fav_media"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="always"
        android:title="@string/fav_list_title" />
</menu>